--- a/package.json
+++ b/package.json
@@ -14,6 +14,25 @@
     "react-scripts": "5.0.1",
     "realm": "^11.9.0"
   },
+  "mac": {
+      "publish": {
+         "provider": "github",
+         "repo": "realm-electron"
+      }
+   },
+   "win": {
+      "publish": {
+         "provider": "github",
+         "repo": "realm-electron"
+      }
+   },
+   "files": [
+      "build/**/*",
+      "node_modules/**/*"
+   ],
+   "publish": {
+      "provider": "github"
+   },
   "scripts": {
     "test": "react-scripts test",
     "eject": "react-scripts eject",
