--- a/package.json
+++ b/package.json
@@ -1,49 +1,14 @@
 {
   "name": "realm-electron",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
-  "main": "public/electron.js",
   "homepage": "./",
-  "dependencies": {
-    "@craco/craco": "^7.1.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "realm": "^11.9.0"
-  },
-  "mac": {
-      "publish": {
-         "provider": "github",
-         "repo": "realm-electron"
-      }
-   },
-   "win": {
-      "publish": {
-         "provider": "github",
-         "repo": "realm-electron"
-      }
-   },
-   "files": [
-      "build/**/*",
-      "node_modules/**/*"
-   ],
-   "publish": {
-      "provider": "github"
-   },
+  "main": "./build/main/index.js",
   "scripts": {
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build": "craco build",
     "start": "electron ."
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -57,8 +22,51 @@
       "last 1 safari version"
     ]
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "dependencies": {
+    "@craco/craco": "^7.1.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "electron-packager": "^17.1.1",
+    "electron-updater": "^5.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "realm": "^11.9.0"
+  },
   "devDependencies": {
     "electron": "^24.4.0",
     "webpack-node-externals": "^3.0.0"
+  },
+  "build": {
+    "mac": {
+      "publish": {
+        "provider": "github",
+        "owner": "AshwinAchuS10",
+        "repo": "realm-electron"
+      }
+    },
+    "win": {
+      "publish": {
+        "provider": "github",
+        "owner": "AshwinAchuS10",
+        "repo": "realm-electron"
+      }
+    },
+    "files": [
+      "build/**/*",
+      "dist/**/*",
+      "package.json",
+      "node_modules/**/*"
+    ],
+    "publish": {
+      "provider": "github"
+    }
   }
 }
