electron basic example js code with realm

--- a/package.json
+++ b/package.json
@@ -1,72 +1,44 @@
 {
-  "name": "realm-electron",
-  "version": "2.0.0",
-  "private": true,
-  "homepage": "./",
-  "main": "./build/main/index.js",
-  "scripts": {
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build": "craco build",
-    "start": "electron ."
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "dependencies": {
-    "@craco/craco": "^7.1.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "electron-packager": "^17.1.1",
-    "electron-updater": "^5.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "realm": "^11.9.0"
-  },
-  "devDependencies": {
-    "electron": "^24.4.0",
-    "webpack-node-externals": "^3.0.0"
-  },
-  "build": {
-    "mac": {
-      "publish": {
-        "provider": "github",
-        "owner": "AshwinAchuS10",
-        "repo": "realm-electron"
+   "name": "realm-electron",
+   "version": "2.0.0",
+   "description": "Realm Electron App",
+   "author": "Ashwin S",
+   "main": "main.js",
+   "homepage": "./",
+   "scripts": {
+      "build": "craco build",
+      "start": "electron .",
+      "dist": "electron-builder",
+      "publish": "publish",
+      "release": "npm run dist && npm run publish"
+   },
+   "dependencies": {
+      "concurrently": "^8.0.1",
+      "electron-updater": "^5.3.0",
+      "path": "^0.12.7",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "realm": "^11.3.0",
+      "wait-on": "^7.0.1"
+   },
+   "devDependencies": {
+      "@craco/craco": "^7.1.0",
+      "electron": "^24.4.0",
+      "webpack-node-externals": "^3.0.0"
+   },
+   "build": {
+      "appId": "com.ashwin.realm-electron",
+      "productName": "RealmElectron",
+      "win": {
+         "target": "nsis"
+      },
+      "directories": {
+         "output": "dist"
       }
-    },
-    "win": {
-      "publish": {
-        "provider": "github",
-        "owner": "AshwinAchuS10",
-        "repo": "realm-electron"
-      }
-    },
-    "files": [
-      "build/**/*",
-      "dist/**/*",
-      "package.json",
-      "node_modules/**/*"
-    ],
-    "publish": {
-      "provider": "github"
-    }
-  }
+   },
+   "repository": "https://github.com/AshwinAchuS10/realm-electron",
+   "publish": {
+      "provider": "github",
+      "releaseType": "release"
+   }
 }
